--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "este-blog",
+  "name": "nipon-astro-theme",
   "type": "module",
-  "version": "0.1.0",
+  "version": "0.0.2",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,14 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.1.0",
-    "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.0",
-    "astro": "^3.2.2"
+    "@astrojs/mdx": "^1.1.1",
+    "@astrojs/rss": "^2.4.3",
+    "@astrojs/sitemap": "^3.0.1",
+    "@astrojs/tailwind": "^5.0.2",
+    "astro": "^3.4.3",
+    "rehype-katex": "7.0.0",
+    "remark-math": "5.1.1",
+    "tailwindcss": "^3.3.3"
   },
-  "description": "```sh npm create astro@latest -- --template blog ```",
-  "main": "index.js",
-  "devDependencies": {},
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0"
+  }
 }
